[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Image_Assets/World/spanSlug.png" type="Texture" id=1]
[ext_resource path="res://LeSLugAI.gd" type="Script" id=2]
[ext_resource path="res://Assets/Image_Assets/Player_Assets/RotoHampter.png" type="Texture" id=3]
[ext_resource path="res://Assets/AudioAssets/slugDeath.mp3" type="AudioStream" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 12.0
height = 102.0

[sub_resource type="CircleShape2D" id=2]
radius = 894.11

[node name="LeSLug" type="KinematicBody2D"]
z_index = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 0.15708
scale = Vector2( 0.0384211, 0.0390744 )
z_index = 3
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 9, 1 )
rotation = 1.5708
z_index = 3
shape = SubResource( 1 )

[node name="hampter" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
z_index = 3
texture = ExtResource( 3 )

[node name="Detection" type="Area2D" parent="."]
z_index = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
z_index = 3
shape = SubResource( 2 )

[node name="SlugDeathSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="Detection" to="." method="_on_Detection_body_entered"]
[connection signal="body_exited" from="Detection" to="." method="_on_Detection_body_exited"]
